--- a/rate.html
+++ b/rate.html
@@ -449,8 +449,20 @@
         // Renders admin-specific navigation links if user has permissions
         function renderAdminLinks() {
             const adminLinksContainer = document.getElementById('admin-links-container');
-            adminLinksContainer.innerHTML = ''; // Clear previous links
-            if (!adminLinksContainer || !currentAuthUser) return;
+            const configNavLink = document.getElementById('config-admin-link');
+            const userManagementNavLink = document.getElementById('user-management-link');
+
+            if (configNavLink) {
+                configNavLink.classList.add('hidden');
+            }
+            if (userManagementNavLink) {
+                userManagementNavLink.classList.add('hidden');
+            }
+
+            if (adminLinksContainer) {
+                adminLinksContainer.innerHTML = '';
+            }
+            if (!currentAuthUser) return;
 
             const userRole = currentAuthUser.db_role; // Role from our database
             const isAdmin = userRole === 'admin' || userRole === 'super_admin';
@@ -458,11 +470,27 @@
 
             // Show config link for admins and super admins
             if (isAdmin) {
-                adminLinksContainer.innerHTML += `<a href="cigar_rating_config.html" class="flex items-center px-3 py-1.5 border text-xs font-medium rounded-full text-white bg-blue-600 hover:bg-blue-500 transition duration-150">${i18next.t('nav.configAdmin')}</a>`;
+                if (configNavLink) {
+                    configNavLink.classList.remove('hidden');
+                    if (i18next.isInitialized) {
+                        configNavLink.textContent = i18next.t('nav.configAdmin');
+                    }
+                }
+                if (adminLinksContainer) {
+                    adminLinksContainer.innerHTML += `<a href="cigar_rating_config.html" class="flex items-center px-3 py-1.5 border text-xs font-medium rounded-full text-white bg-blue-600 hover:bg-blue-500 transition duration-150">${i18next.t('nav.configAdmin')}</a>`;
+                }
             }
             // Show user management link only for super admins
             if (isSuperAdmin) {
-                adminLinksContainer.innerHTML += `<a href="role_management.html" class="flex items-center px-3 py-1.5 border text-xs font-medium rounded-full text-yellow-100 bg-purple-600 hover:bg-purple-500 ml-2 transition duration-150">${i18next.t('nav.userAdmin')}</a>`;
+                if (userManagementNavLink) {
+                    userManagementNavLink.classList.remove('hidden');
+                    if (i18next.isInitialized) {
+                        userManagementNavLink.textContent = i18next.t('nav.userAdmin');
+                    }
+                }
+                if (adminLinksContainer) {
+                    adminLinksContainer.innerHTML += `<a href="role_management.html" class="flex items-center px-3 py-1.5 border text-xs font-medium rounded-full text-yellow-100 bg-purple-600 hover:bg-purple-500 ml-2 transition duration-150">${i18next.t('nav.userAdmin')}</a>`;
+                }
             }
         }
 
