--- a/role_management.html
+++ b/role_management.html
@@ -60,7 +60,7 @@
 
     <div class="px-4 sm:px-6 lg:px-8 pt-4">
         <div class="mx-auto max-w-7xl">
-            <div data-include-nav data-active="config" data-language="flags"></div>
+            <div data-include-nav data-active="roles" data-language="flags"></div>
         </div>
     </div>
 
