Add Instagram template variable reference

--- a/role_management.html
+++ b/role_management.html
@@ -321,6 +321,15 @@
                         <label class="block">
                             <span class="text-gray-700">发布模板</span>
                             <textarea id="ig-template-input" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 focus:border-purple-500" placeholder="{{title}} 获得 {{score}} 分!&#10;&#10;{{review}}&#10;&#10;#Cigar #Pistacho."></textarea>
+                            <div class="mt-2 text-xs text-gray-600 bg-gray-50 border border-dashed border-gray-200 rounded-md p-3 space-y-1">
+                                <p class="font-semibold text-gray-700">可用变量：</p>
+                                <ul class="list-disc list-inside space-y-1">
+                                    <li><code>{{title}}</code> - 评分标题或雪茄名称</li>
+                                    <li><code>{{score}}</code> - 标准化得分</li>
+                                    <li><code>{{review}}</code> - 评语内容</li>
+                                </ul>
+                                <p class="text-gray-500">可组合常规文字与换行符，例如 <code>\n</code> 表示换行。</p>
+                            </div>
                         </label>
 
                         <div class="flex items-center gap-3">
