Add results placeholders reference to Instagram template

--- a/role_management.html
+++ b/role_management.html
@@ -328,6 +328,17 @@
                                     <li><code>{{score}}</code> - 标准化得分</li>
                                     <li><code>{{review}}</code> - 评语内容</li>
                                 </ul>
+                                <p class="font-semibold text-gray-700 pt-1">results 页面占位符汇总（按用途分组）：</p>
+                                <ul class="list-disc list-inside space-y-1 ml-2">
+                                    <li>
+                                        <span class="font-medium">Meta / 概要模板：</span>
+                                        <span><code>{{name}}</code>（雪茄名称）、<code>{{origin}}</code>（产地）、<code>{{size}}</code>（尺寸规格）、<code>{{grade}}</code>（最终评级字母）、<code>{{score}}</code>（最终得分数字）、<code>{{reviewer}}</code>（点评人）。</span>
+                                    </li>
+                                    <li>
+                                        <span class="font-medium">叙述性总结：</span>
+                                        <span><code>{{origin}}</code>、<code>{{name}}</code>、<code>{{size}}</code>（基本信息重用），<code>{{observations}}</code>（评分选项生成的观察总结），<code>{{flavors}}</code>（主要风味列表），<code>{{grade}}</code> / <code>{{gradeName}}</code>（评级字母与名称），<code>{{hierarchy}}</code>（评分等级层级说明），<code>{{criterion}}</code> / <code>{{option}}</code>（按“评分维度名 / 选择的选项”逐条罗列）。</span>
+                                    </li>
+                                </ul>
                                 <p class="text-gray-500">可组合常规文字与换行符，例如 <code>\n</code> 表示换行。</p>
                             </div>
                         </label>
