--- a/rate.html
+++ b/rate.html
@@ -358,6 +358,12 @@
             mobileViewportMatcher.addListener(updateCompactPreference);
         }
 
+        const formatIntegerScore = (value) => {
+            return typeof value === 'number' && !Number.isNaN(value)
+                ? Math.trunc(value).toString()
+                : '0';
+        };
+
         function shouldUseCompactApiPayload() {
             return preferCompactApiPayload;
         }
@@ -954,7 +960,7 @@
             document.getElementById('app-title-display').textContent = i18next.t(ratingConfig.appTitle || "Rating App");
             document.getElementById('app-description-display').textContent = i18next.t(ratingConfig.description || "Loading description...");
             document.getElementById('total-weight-max-display').textContent = ratingConfig.totalWeightMax ?? 0;
-            document.getElementById('current-score-display').textContent = totalScore.toFixed(2);
+            document.getElementById('current-score-display').textContent = formatIntegerScore(totalScore);
 
             // Update progress bar
             const ratedCount = Object.keys(userRatings).length;
@@ -997,12 +1003,12 @@
                     <h4 class="text-base sm:text-lg font-semibold text-gray-800">
                         ${i18next.t(criterionKey)} ${isSuperAdmin ? `(${currentWeight} ${i18next.t('common.points')})` : ''}
                     </h4>
-                    <span class="text-lg sm:text-xl font-extrabold text-green-600">${currentScore.toFixed(2)}</span>
+                    <span class="text-lg sm:text-xl font-extrabold text-green-600">${formatIntegerScore(currentScore)}</span>
                 </div>
                 <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-2 sm:gap-3">
                 ${(criterion.options || []).map((option, optIndex) => {
                     const isSelected = selectedOptionIndex === optIndex; // Check if this option is selected
-                    const scoreValue = (currentWeight * (option.scorePct || 0)).toFixed(2); // Score for this option
+                    const scoreValue = formatIntegerScore(currentWeight * (option.scorePct || 0)); // Score for this option
                     return `<button type="button" onclick="updateRatingSelection('${categoryKey}', '${criterionKey}', ${optIndex})"
                         class="p-2 sm:p-3 text-xs sm:text-sm text-center rounded-lg border transition ${isSelected ? 'bg-indigo-600 text-white shadow-md' : 'bg-white hover:bg-indigo-50'}">
                         ${i18next.t(option.descriptionKey)}
