Reorder results sections

--- a/results.html
+++ b/results.html
@@ -299,8 +299,17 @@
                  </button>
              </div>
 
-            <!-- Details Sections (Narrative Summary, Rating Details) -->
+            <!-- Details Sections (Rating Details, Narrative Summary) -->
             <div class="space-y-4">
+                 <!-- Rating Details Summary -->
+                 <div id="summary-details" class="bg-white rounded-xl shadow-lg p-6">
+                     <div class="flex justify-between items-center font-bold text-lg text-gray-800">
+                         <span data-i18n="resultsPage.detailsTitle">评分详情汇总</span>
+                     </div>
+                     <div id="summary-container" class="mt-4">
+                         <!-- Rating details summary inserted by JS -->
+                     </div>
+                 </div>
                  <!-- Narrative Summary -->
                  <details id="narrative-summary-details" class="group bg-white rounded-xl shadow-lg p-6 transition-all duration-300" open>
                      <summary class="flex justify-between items-center cursor-pointer font-bold text-lg text-gray-800">
@@ -320,17 +329,6 @@
                      </summary>
                      <div id="narrative-summary-container" class="mt-4 prose max-w-none">
                          <!-- Narrative summary inserted by JS -->
-                     </div>
-                 </details>
-                 <!-- Rating Details Summary -->
-                 <details id="summary-details" class="group bg-white rounded-xl shadow-lg p-6">
-                     <summary class="flex justify-between items-center cursor-pointer font-bold text-lg text-gray-800">
-                         <span data-i18n="resultsPage.detailsTitle">评分详情汇总</span>
-                         <!-- Arrow icon -->
-                         <svg class="w-5 h-5 transform group-open:rotate-180 transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
-                     </summary>
-                     <div id="summary-container" class="mt-4">
-                         <!-- Rating details summary inserted by JS -->
                      </div>
                  </details>
             </div>
