--- a/results.html
+++ b/results.html
@@ -115,7 +115,7 @@
             inset: -30px;
             background-size: cover;
             background-position: center;
-            filter: blur(32px) brightness(0.8);
+            filter: blur(32px) brightness(0.8) hue-rotate(var(--share-bg-hue, 0deg));
             transform: scale(1.05);
         }
         #share-card-overlay {
@@ -1602,8 +1602,11 @@
             if (!bg) return;
             if (imageUrl) {
                 bg.style.backgroundImage = `url('${imageUrl}')`;
+                const randomHue = Math.floor(Math.random() * 360);
+                bg.style.setProperty('--share-bg-hue', `${randomHue}deg`);
             } else {
                 bg.style.backgroundImage = '';
+                bg.style.removeProperty('--share-bg-hue');
             }
         }
 
